axonius-assessment/force-app/main/default/objects/Contact/fields/Number_of_Birds__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Birds__c</fullName>
    <description>total number of birds owned by the contact.</description>
    <label>Number of Birds</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>