axonius-assessment/force-app/main/default/objects/Contact/fields/Number_of_Pets__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Pets__c</fullName>
    <description>total number of pets owned by the contact.</description>
    <label>Number of Pets</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>