axonius-assessment/force-app/main/default/objects/Contact/fields/Total_Birds_Trained__c.field-meta.xml
<CustomField>
    <fullName>Total_Birds_Trained__c</fullName>
    <description>total number of birds that attended a training session conducted by the Veterinarian</description>
    <label>Total Birds Trained</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>