axonius-assessment/force-app/main/default/objects/Contact/fields/Total_Cats_Trained__c.field-meta.xml
<CustomField>
    <fullName>Total_Cats_Trained__c</fullName>
    <description>total number of cats that attended a training session conducted by the Veterinarian</description>
    <label>Total Cats Trained</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>