axonius-assessment/force-app/main/default/objects/Contact/fields/Total_Pets_Trained__c.field-meta.xml
<CustomField>
    <fullName>Total_Pets_Trained__c</fullName>
    <description>total number of pets that attended a training session conducted by the Veterinarian</description>
    <label>Total Pets Trained</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>