axonius-assessment/force-app/main/default/objects/Contact/recordTypes/Pet_Owner.recordType-meta.xml
<RecordType>
    <fullName>Pet_Owner</fullName>
    <active>true</active>
    <description>Pet Owners contact information</description>
    <label>Pet Owner</label>
</RecordType>