axonius-assessment/force-app/main/default/objects/Contact/recordTypes/Trainer.recordType-meta.xml
<RecordType>
    <fullName>Trainer</fullName>
    <active>true</active>
    <description>Veterinarian Trainer Employee Contact Information</description>
    <label>Trainer</label>
</RecordType>