axonius-assessment/force-app/main/default/objects/Contact/listViews/Pet_Owners.listView-meta.xml
<ListView>
    <fullName>Pet_Owners</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.Pet_Owner</value>
    </filters>
    <label>Pet Owners</label>
</ListView>